--- a/SiteEnergiaR/WebContent/Home.html
+++ b/SiteEnergiaR/WebContent/Home.html
@@ -1,14 +1,107 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
-oioioiiogsdgs
-
-
-
-oioi
-</body>
+	<head>
+		<title>Pagina Inicial</title>
+		
+		<style>
+		
+			ul {
+				background-color: #007235;
+				padding: 28px;
+				margin: -8px;
+				margin-bottom: 9px;
+			}
+			
+			li {
+				display: inline;
+			}
+			
+			ul li a{
+				font-family: "Arial";
+				font-style: normal;
+				font-size:15px;
+				padding: 7px 50px;
+				text-decoration: none;
+				color:black;
+				text-align: center;
+				font-weight: bold;
+			}
+			
+			
+			.logo img {
+				float: left;
+				width: 30px;
+				height: 30px;
+			}
+			
+			.trocaCor {
+				margin-top:5px;
+				width:100%;
+				height:65%;
+				
+			}
+			
+			.trocaCor2 {
+				margin: -8px;
+				padding: 10px;
+				color: white;
+				width:100%;
+				height:65%;
+				background-color: #048042;
+				float: left;
+			}
+			
+			
+			
+		</style>
+	
+	</head>
+	
+	<body>		
+	
+	<div class="logo">
+		<ul>
+			<img src="C:\Users\lab\Downloads\poke.png">
+			<li><a href="#">SOLAR</a></li>
+			<li><a href="#">EOLICA</a></li>
+			<li><a href="#">BIOMASSA</a></li>
+			<li><a href="#">GEOTERMICA</a></li>
+			<li><a href="#">ONDAS</a></li>
+			<li><a href="#">FORM</a></li>
+			<li><a href="#">APP</a></li>
+		</ul>
+	</div>
+	
+	<div  class="trocaCor">
+	
+	d
+	
+	</div>
+	
+	<div  class="trocaCor2">
+		<img src="C:\Users\lab\Downloads\poke.png">
+	
+Experimente usar isso:
+	
+	</div>
+	
+	<div  class="trocaCor">
+		adsadasdsa
+	</div>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+		
+	
+	</body>
 </html>
