--- a/SiteEnergiaR/WebContent/Home.html
+++ b/SiteEnergiaR/WebContent/Home.html
@@ -2,20 +2,20 @@
 <html>
 	<head>
 		<title>Pagina Inicial</title>
-		
+
 		<style>
-		
+
 			ul {
 				background-color: #007235;
 				padding: 28px;
 				margin: -8px;
 				margin-bottom: 9px;
 			}
-			
+
 			li {
 				display: inline;
 			}
-			
+
 			ul li a{
 				font-family: "Arial";
 				font-style: normal;
@@ -26,21 +26,21 @@
 				text-align: center;
 				font-weight: bold;
 			}
-			
-			
+
+
 			.logo img {
 				float: left;
 				width: 30px;
 				height: 30px;
 			}
-			
+
 			.trocaCor {
 				margin-top:5px;
 				width:100%;
 				height:65%;
-				
+
 			}
-			
+
 			.trocaCor2 {
 				margin: -8px;
 				padding: 10px;
@@ -50,15 +50,15 @@
 				background-color: #048042;
 				float: left;
 			}
-			
-			
-			
+
+
+
 		</style>
-	
+
 	</head>
-	
-	<body>		
-	
+
+	<body>
+
 	<div class="logo">
 		<ul>
 			<img src="C:\Users\lab\Downloads\poke.png">
@@ -71,37 +71,38 @@
 			<li><a href="#">APP</a></li>
 		</ul>
 	</div>
-	
+
 	<div  class="trocaCor">
-	
+
 	d
-	
+
 	</div>
-	
+
 	<div  class="trocaCor2">
 		<img src="C:\Users\lab\Downloads\poke.png">
-	
+
 Experimente usar isso:
-	
+
 	</div>
-	
+
 	<div  class="trocaCor">
 		adsadasdsa
 	</div>
-	
-	
-	
-	
+
+
+
+	oiiii
 	meu nome e hugo
-	
-	
-	
-	
-	
-	
-	
-	
-		
-	
+
+
+
+
+coisa linda
+
+
+
+
+
+
 	</body>
 </html>
