--- a/SiteEnergiaR/WebContent/Home.html
+++ b/SiteEnergiaR/WebContent/Home.html
@@ -3,57 +3,7 @@
 	<head>
 		<title>Pagina Inicial</title>
 
-		<style>
-
-			ul {
-				background-color: #007235;
-				padding: 28px;
-				margin: -8px;
-				margin-bottom: 9px;
-			}
-
-			li {
-				display: inline;
-			}
-
-			ul li a{
-				font-family: "Arial";
-				font-style: normal;
-				font-size:15px;
-				padding: 7px 50px;
-				text-decoration: none;
-				color:black;
-				text-align: center;
-				font-weight: bold;
-			}
-
-
-			.logo img {
-				float: left;
-				width: 30px;
-				height: 30px;
-			}
-
-			.trocaCor {
-				margin-top:5px;
-				width:100%;
-				height:65%;
-
-			}
-
-			.trocaCor2 {
-				margin: -8px;
-				padding: 10px;
-				color: white;
-				width:100%;
-				height:65%;
-				background-color: #048042;
-				float: left;
-			}
-
-
-
-		</style>
+		<link rel="stylesheet" type="text/css" href="CSS/MenuHF">
 
 	</head>
 
@@ -88,8 +38,6 @@ Experimente usar isso:
 	<div  class="trocaCor">
 		adsadasdsa
 	</div>
-
-
 
 	oiiii
 	meu nome e hugo
