CSS Ajustado + Logo (Precisa Posicionar)

--- a/SiteEnergiaR/WebContent/Home.html
+++ b/SiteEnergiaR/WebContent/Home.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Pagina Inicial</title>
 
-		<link rel="stylesheet" type="text/css" href="CSS/MenuHF">
+		<link rel="stylesheet" href="CSS/MenuHF.css">
 
 	</head>
 
@@ -11,7 +11,7 @@
 
 	<div class="logo">
 		<ul>
-			<img src="C:\Users\lab\Downloads\poke.png">
+			<img src="Imagem/Energy_logo.png">
 			<li><a href="#">SOLAR</a></li>
 			<li><a href="#">EOLICA</a></li>
 			<li><a href="#">BIOMASSA</a></li>
@@ -29,7 +29,7 @@
 	</div>
 
 	<div  class="trocaCor2">
-		<img src="C:\Users\lab\Downloads\poke.png">
+		<img src="Imagem/Energy_logo.png">
 
 Experimente usar isso:
 
