Att Logo+Home+Css

--- a/SiteEnergiaR/WebContent/Home.html
+++ b/SiteEnergiaR/WebContent/Home.html
@@ -23,18 +23,28 @@
 	</div>
 
 	<div  class="trocaCor">
+		<div class="img_home">
+		<img src="Imagem/Solar_home.png" alt="Solar_Desenho_Home">
+		<p>
+				<b>
+						Energia Solar:
+				</b>
+		</p>
+		<p>
 
-	d
-
+				Uma das formas de geração de energia renovavel é a utlização na energia solar, que funciona através da conversão da energia solar em energia elétrica, através de placas que são feitas de semicondutores	como o silicio e são chamadas de células fotovoltaicas.
+		</p>
+		</div>
 	</div>
 
 	<div  class="trocaCor2">
+		<div class="logo">
 		<img src="Imagem/Energy_logo.png">
 
 Experimente usar isso:
-
+		</div>
 	</div>
-
+<!--
 	<div  class="trocaCor">
 		adsadasdsa
 	</div>
@@ -46,7 +56,7 @@ Experimente usar isso:
 
 
 coisa linda
-
+-->
 
 
 
