Solar+CSS solar+texto

--- a/SiteEnergiaR/WebContent/Solar.html
+++ b/SiteEnergiaR/WebContent/Solar.html
@@ -1,1 +1,80 @@
-Teste
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Pagina Inicial</title>
+
+		<link rel="stylesheet" href="CSS/MenuHF.css">
+
+	</head>
+
+	<body>
+
+	<div class="logo">
+		<ul>
+			<img src="Imagem/Energy_logo.png">
+			<li><a href="#">SOLAR</a></li>
+			<li><a href="#">EOLICA</a></li>
+			<li><a href="#">BIOMASSA</a></li>
+			<li><a href="#">GEOTERMICA</a></li>
+			<li><a href="#">ONDAS</a></li>
+			<li><a href="#">FORM</a></li>
+			<li><a href="#">APP</a></li>
+		</ul>
+	</div>
+
+	<div  class="trocaCor">
+    <p>
+      <b>
+        <center>
+          Energia Solar
+        </center>
+      </b>
+    </p>
+    <p>
+      <b>
+        Funcionamento:
+      </b>
+    </p>
+    <p>
+      A energia solar funciona através dos painéis que capturam a radiação solar através dos painéis fotovoltaicos onde está radiação é convertida em energia elétrica através de um conversor conectado junto a rede elétrica convencional.
+      Durante o dia esta energia é coletada e armazenada neste coletor que ao final do dia é utilizada na rede elétrica de sua residência como um gerador de energia utilizados quando se está sem energia, a posição das placas de energia afetam o potencial de energia adquirida durante o dia, se estiver bem posicionada a energia coletada será melhor e terá um melhor desempenho em questão de duração e em caso de sobra de energia a mesma pode ser enviada para a fornecedora de energia e pode deixar a conta de energia mais barata.
+    </p>
+  </div>
+	<div  class="trocaCor2">
+    <p>
+      <b>
+        Inversor de Energia:
+      </b>
+    </p>
+    <p>
+      O inversor de energia é o equipamento que faz a conversão da energia recebida, ele transforma a energia solar que está em corrente continua CC* e transforma em corrente Alternada CA* após passar pelo inversor a energia pode ser utilizada em qualquer equipamento domestico e em alguns equipamento industriais.
+    </p>
+  </div>
+  <div  class="trocaCor">
+    <br>
+    <p>
+      <b>
+      Corrente Continua:
+      </b>
+    </p>
+    <p>
+      (“CC” a corrente a qual não tem polaridade normalmente utilizada em circuitos eletrônicos, como notebooks, tvs, impressoras... está rede normalmente é convertida de CA para CC através de uma ponte retificadora)
+    </p>
+    <p>
+      <b>
+      Corrente Alternada:
+      </b>
+    </p>
+    <p>
+      (“CA” a corrente utilizada para enviar energia elétrica para o consumo residencial, empresarial, pode ser usado para alimentar Chuveiros, fogão, micro-ondas e qualquer outro tipo de equipamento que use esta rede)
+    </p>
+  </div>
+
+
+
+
+
+
+
+  </body>
+</html>
