muitas coisas no Css

--- a/SiteEnergiaR/WebContent/Home.html
+++ b/SiteEnergiaR/WebContent/Home.html
@@ -10,8 +10,9 @@
 	<body>
 
 	<div class="logo">
+		<img src="Imagem/Energy_logo.png">
 		<ul>
-			<img src="Imagem/Energy_logo.png">
+				<li><a href="#">HOME</a></li>
 			<li><a href="#">SOLAR</a></li>
 			<li><a href="#">EOLICA</a></li>
 			<li><a href="#">BIOMASSA</a></li>
@@ -21,6 +22,8 @@
 			<li><a href="#">APP</a></li>
 		</ul>
 	</div>
+
+
 
 	<div  class="trocaCor">
 		<div class="img_home">
@@ -37,28 +40,16 @@
 		</div>
 	</div>
 
-	<div  class="trocaCor2">
-		<div class="logo">
-		<img src="Imagem/Energy_logo.png">
 
-Experimente usar isso:
-		</div>
-	</div>
-<!--
-	<div  class="trocaCor">
-		adsadasdsa
+	<div class="trocaCor2">
+		ds
 	</div>
 
-	oiiii
-	meu nome e hugo
 
 
-
-
-coisa linda
--->
-
-
+	<div class="trocaCor">
+			gdsds
+	</div>
 
 
 
