--- a/SiteEnergiaR/WebContent/Home.html
+++ b/SiteEnergiaR/WebContent/Home.html
@@ -18,7 +18,7 @@
 			<li><a href="#">BIOMASSA</a></li>
 			<li><a href="#">GEOTERMICA</a></li>
 			<li><a href="#">ONDAS</a></li>
-			<li><a href="#">FORM</a></li>
+			<li><a href="#">FORMULARIO</a></li>
 			<li><a href="#">APP</a></li>
 		</ul>
 	</div>
