Sei la o que eu fiz

--- a/SiteEnergiaR/WebContent/Solar.html
+++ b/SiteEnergiaR/WebContent/Solar.html
@@ -3,15 +3,16 @@
 	<head>
 		<title>Pagina Inicial</title>
 
-		<link rel="stylesheet" href="CSS/MenuHF.css">
+		<link rel="stylesheet" href="CSS/SolarHF.css">
 
-	</head>
+  </head>
 
 	<body>
 
 	<div class="logo">
+		<img src="Imagem/Energy_logo.png">
 		<ul>
-			<img src="Imagem/Energy_logo.png">
+				<li><a href="#">HOME</a></li>
 			<li><a href="#">SOLAR</a></li>
 			<li><a href="#">EOLICA</a></li>
 			<li><a href="#">BIOMASSA</a></li>
