Iniciando a pagina de Ondas
E outras coisas no CSS da Home

--- a/SiteEnergiaR/WebContent/Home.html
+++ b/SiteEnergiaR/WebContent/Home.html
@@ -12,7 +12,7 @@
 	<div class="logo">
 		<img src="Imagem/Energy_logo.png">
 		<ul>
-				<li><a href="#">HOME</a></li>
+			<li><a href="#">HOME</a></li>
 			<li><a href="#">SOLAR</a></li>
 			<li><a href="#">EOLICA</a></li>
 			<li><a href="#">BIOMASSA</a></li>
@@ -27,16 +27,13 @@
 
 	<div  class="trocaCor">
 		<div class="img_home">
-		<img src="Imagem/Solar_home.png" alt="Solar_Desenho_Home">
-		<p>
-				<b>
-						Energia Solar:
-				</b>
-		</p>
-		<p>
-
-				Uma das formas de geração de energia renovavel é a utlização na energia solar, que funciona através da conversão da energia solar em energia elétrica, através de placas que são feitas de semicondutores	como o silicio e são chamadas de células fotovoltaicas.
-		</p>
+			<img src="Imagem/Solar_home.png" alt="Solar_Desenho_Home">
+			<p>
+					<b>Energia Solar:</b>
+			</p>
+			<p>
+					Uma das formas de geração de energia renovavel é a utlização na energia solar, que funciona através da conversão da energia solar em energia elétrica, através de placas que são feitas de semicondutores	como o silicio e são chamadas de células fotovoltaicas.
+			</p>
 		</div>
 	</div>
 
@@ -45,13 +42,17 @@
 		ds
 	</div>
 
-
-
 	<div class="trocaCor">
 			gdsds
 	</div>
 
+	<div class="trocaCor3">
 
+	</div>
+
+	<footer>
+
+	</footer>
 
 	</body>
 </html>
