--- a/SiteEnergiaR/WebContent/Solar.html
+++ b/SiteEnergiaR/WebContent/Solar.html
@@ -2,26 +2,27 @@
 <html>
 	<head>
 		<title>Pagina Inicial</title>
-
+		<link rel="stylesheet" href="CSS/MenuHF.css">
 		<link rel="stylesheet" href="CSS/SolarHF.css">
 
   </head>
 
 	<body>
 
-	<div class="logo">
-		<img src="Imagem/Energy_logo.png">
-		<ul>
+		<div class="logo">
+			<img src="Imagem/Energy_logo.png">
+			<ul>
 				<li><a href="#">HOME</a></li>
-			<li><a href="#">SOLAR</a></li>
-			<li><a href="#">EOLICA</a></li>
-			<li><a href="#">BIOMASSA</a></li>
-			<li><a href="#">GEOTERMICA</a></li>
-			<li><a href="#">ONDAS</a></li>
-			<li><a href="#">FORM</a></li>
-			<li><a href="#">APP</a></li>
-		</ul>
-	</div>
+				<li><a href="#">SOLAR</a></li>
+				<li><a href="#">EOLICA</a></li>
+				<li><a href="#">BIOMASSA</a></li>
+				<li><a href="#">GEOTERMICA</a></li>
+				<li><a href="#">ONDAS</a></li>
+				<li><a href="#">FORMULARIO</a></li>
+				<li><a href="#">APP</a></li>
+			</ul>
+		</div>
+
 
 	<div  class="trocaCor">
 		<div class="img_solar">
@@ -46,7 +47,6 @@
   </div>
 	<div  class="trocaCor2">
 		<div class="img_solar">
-<!--		<img src="Imagem/Solar_2.png" alt="Solar_Desenho_1"> -->
 			<br>
 			<br>
 		  <p>
