Inicio de Ondas

--- a/SiteEnergiaR/WebContent/Ondas.html
+++ b/SiteEnergiaR/WebContent/Ondas.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Pagina Inicial</title>
 
-		<link rel="stylesheet" href="CSS/Ondas.css">
+		<link rel="stylesheet" href="CSS/OndasHF.css">
 
 	</head>
 
@@ -26,7 +26,7 @@
 
 
 	<div  class="trocaCor">
-		ONDAS
+		<h2>Energia ondas e marés</h2>
 	</div>
 
 
