Add New itens Solar + Imagens

--- a/SiteEnergiaR/WebContent/Solar.html
+++ b/SiteEnergiaR/WebContent/Solar.html
@@ -26,7 +26,7 @@
 
 	<div  class="trocaCor">
 		<div class="img_solar">
-		<img src="Imagem/Solar_1.png" alt="Solar_Desenho_1" style="width: 30%; height:30%;">
+		<img id="solar_1" src="Imagem/Solar_1.png" alt="Solar_Desenho_1">
 	    <p>
 	      <b>
 	        <center>
@@ -41,27 +41,29 @@
 	    </p>
 	    <p>
 	      A energia solar funciona através dos painéis que capturam a radiação solar através dos painéis fotovoltaicos onde está radiação é convertida em energia elétrica através de um conversor conectado junto a rede elétrica convencional.
-	      Durante o dia esta energia é coletada e armazenada neste coletor que ao final do dia é utilizada na rede elétrica de sua residência como um gerador de energia utilizados quando se está sem energia, a posição das placas de energia afetam o potencial de energia adquirida durante o dia, se estiver bem posicionada a energia coletada será melhor e terá um melhor desempenho em questão de duração e em caso de sobra de energia a mesma pode ser enviada para a fornecedora de energia e pode deixar a conta de energia mais barata.
+			</p>
+			<p>
+				Durante o dia esta energia é coletada e armazenada neste coletor que ao final do dia é utilizada na rede elétrica de sua residência como um gerador, utilizado quando se está sem energia, a posição das placas afetam o potencial de energia adquirida durante o dia, se estiver bem posicionada a energia coletada será melhor e terá um melhor desempenho em questão de duração e em caso de sobra de energia a mesma pode ser enviada para a fornecedora de energia fazendo que ganhe créditos.
 	    </p>
+			<p>
+				Outras questões podem afetar a coleta de energia solar, pela manhã a coleta é menor pois o sol está nascendo e a radiação de luz é menor, já na metade do dia é o momento onde o sol está em seu pico de radiação onde é possível coletar toda a energia para o dia todo onde se sobra energia a qual é creditada. Em dias de chuva ou nublados há também a coleta de energia, mas em pouca quantidade.
+			</p>
 		</div>
   </div>
 	<div  class="trocaCor2">
-		<div class="img_solar">
-			<br>
-			<br>
-		  <p>
-	      <b>
-	        Inversor de Energia:
-	      </b>
-	    </p>
-	    <p>
-	      O inversor de energia é o equipamento que faz a conversão da energia recebida, ele transforma a energia solar que está em corrente continua CC* e transforma em corrente Alternada CA* após passar pelo inversor a energia pode ser utilizada em qualquer equipamento domestico e em alguns equipamento industriais.
-	    </p>
-		</div>
+		<br>
+		<br>
+		 <p>
+	     <b>
+	       Inversor de Energia:
+	     </b>
+	   </p>
+	   <p>
+	     O inversor de energia é o equipamento que faz a conversão da energia recebida, ele transforma a energia solar que está em corrente continua CC* e transforma em corrente Alternada CA* após passar pelo inversor a energia pode ser utilizada em qualquer equipamento domestico e em alguns equipamentos industriais.
+	   </p>
 	</div>
   <div  class="trocaCor">
-		<div class="img_solar">
-		<img src="Imagem/Solar_4.png" alt="Solar_Desenho_4" style="float: left; margin-right: 20px">
+		<img id="solar_4" src="Imagem/Solar_4.png" alt="Solar_Desenho_4">
 	    <p>
 	      <b>
 	      Corrente Continua:
@@ -70,6 +72,7 @@
 	    <p>
 	      (“CC” a corrente a qual não tem polaridade normalmente utilizada em circuitos eletrônicos, como notebooks, tvs, impressoras... está rede normalmente é convertida de CA para CC através de uma ponte retificadora)
 	    </p>
+			<br>
 	    <p>
 	      <b>
 	      Corrente Alternada:
@@ -78,9 +81,33 @@
 	    <p>
 	      (“CA” a corrente utilizada para enviar energia elétrica para o consumo residencial, empresarial, pode ser usado para alimentar Chuveiros, fogão, micro-ondas e qualquer outro tipo de equipamento que use esta rede)
 	    </p>
-		</div>
+	</div>
+	<div  class="trocaCor2">
+		<img id="solar_5" src="Imagem/Solar_5.png" alt="Solar_Desenho_5">
+		<center>
+			<p>
+				<b>
+					Funcionamento dos créditos
+				</b>
+			</p>
+			<p>
+				A partir das regras criadas pela ANEEL foi o órgão que estabeleceu condições para uso dos geradores de energia e alimentação das redes, a energia é emprestada por outra residência, comercio, empresa ... em Watts essa energia é creditada na conta do gerador após ser utilizado. Esse crédito pode ser usado em até 5 anos deixado a conta de energia mais barata descontando da fatura mensal.
+			</p>
+		</center>
 	</div>
 
+
+
+
+
+
+	<div class="trocaCor3">
+
+	</div>
+
+	<footer>
+
+	</footer>
 
 
 
