fiz uns bagúio ai.

--- a/SiteEnergiaR/WebContent/Geotermica.html
+++ b/SiteEnergiaR/WebContent/Geotermica.html
@@ -24,27 +24,29 @@
 		</ul>
 	</div>
 
-
+	<h1><center>Energia Geotérmica</center></h1>
 
 	<div  class="trocaCor">
-		<h2><center>Energia Geotérmica</center></h2>
-		<p>
+		<img id="Geotermica_1" src="Imagem\Geotermica_1.jpg" alt="geothermal_energy">
+		<p class="b">
 			<b>
 					Definição:
 			</b>
 		</p>
-		<p>
-			A Energia Geotérmica “geo” significa Terra, e “therme” correspondente à temperatura, é a energia gerada pelo calor proveniente do interior da terra. <br>
+		<p class="a">
+			A Energia Geotérmica “geo” significa Terra, e “therme” correspondente à temperatura,<br>
+			é a energia gerada pelo calor proveniente do interior da terra.
 		</p>
-		<p>
+		<p class="b">
 			<b>
 				Funcionamento:
 			</b>
 		</p>
-		<p>
-			O processo de aproveitamento dessa energia é feito por grandes perfurações no solo, visto o calor existente abaixo da superfície terrestre, <br>
-			esse tipo de recurso energético é obtido por meio das rochas quentes (secas e úmidas) e o vapor quente proveniente do interior da terra. <br>
-			Considerado uma fonte renovável e limpa produz baixo impacto ambiental.
+		<p class="a">
+			O processo de aproveitamento dessa energia é feito por grandes perfurações no solo,<br>
+			visto o calor existente abaixo da superfície terrestre, esse tipo de recurso energético<br>
+			é obtido por meio das rochas quentes (secas e úmidas) e o vapor quente proveniente do<br>
+			interior da terra. Considerado uma fonte renovável e limpa produz baixo impacto ambiental.
 		</p>
 	</div>
 
