--- a/SiteEnergiaR/WebContent/Geotermica.html
+++ b/SiteEnergiaR/WebContent/Geotermica.html
@@ -28,21 +28,21 @@
 
 	<div  class="trocaCor">
 		<img id="Geotermica_1" src="Imagem\Geotermica_1.jpg" alt="geothermal_energy">
-		<p class="b">
+		<p class="b1">
 			<b>
-					Definição:
+				Definição:
 			</b>
 		</p>
-		<p class="a">
+		<p class="a1">
 			A Energia Geotérmica “geo” significa Terra, e “therme” correspondente à temperatura,<br>
 			é a energia gerada pelo calor proveniente do interior da terra.
 		</p>
-		<p class="b">
+		<p class="b1">
 			<b>
 				Funcionamento:
 			</b>
 		</p>
-		<p class="a">
+		<p class="a1">
 			O processo de aproveitamento dessa energia é feito por grandes perfurações no solo,<br>
 			visto o calor existente abaixo da superfície terrestre, esse tipo de recurso energético<br>
 			é obtido por meio das rochas quentes (secas e úmidas) e o vapor quente proveniente do<br>
@@ -50,8 +50,30 @@
 		</p>
 	</div>
 
-
 	<div class="trocaCor2">
+		<!--<img id="Geotermica_2" src="Imagem\Geotermica_2.jpg" alt="Usina_Geotermica">-->
+		<p class="b2">
+				<b>
+					Usinas Geotérmicas:
+				</b>
+		</p>
+		<p class="a2">
+			Chamadas também de centrais geotérmicas são os locais de produção desse tipo de energia,<br>
+			sendo implantada próxima aos locais onde há grande quantidade de vapor e água quente,<br>
+			sendo assim, os reservatórios geotérmicos fornecem a energia necessária para alimentar os<br>
+			geradores de turbina, produzindo assim, a eletricidade.
+		</p>
+		<p class="b2">
+			<b>
+				Transformação em energia:
+			</b>
+		</p>
+		<p class="a2">
+			O vapor de reservatórios geotérmicos fornece a energia que alimenta os geradores de turbina.<br>
+			A água geotérmica usada é depois reenviada ao reservatório através de um poço de injeção,<br>
+			para ser reaquecida, para assim manter a pressão, e suportar o reservatório.<br>
+			Há três formas de utilização da energia geotérmica:
+		</p>
 	</div>
 
 	<div class="trocaCor">
