Parei por aqui pq deu vontade de morrer.

--- a/SiteEnergiaR/WebContent/Geotermica.html
+++ b/SiteEnergiaR/WebContent/Geotermica.html
@@ -77,9 +77,67 @@
 	</div>
 
 	<div class="trocaCor">
+		<p>
+			<b class="b3">
+				Formas da energia Geométrica:
+			</b>
+		</p>
+		<p class="a3">
+			<strong>Utilização direta:</strong> reservatórios geotérmicos de temperaturas baixas moderadas (20ºC - 150ºC)<br>
+			podem ser aproveitadas diretamente para fornecer calor para a indústria, aquecimento ambiente, termas e outros<br>
+			aproveitamentos comerciais.<br><br>
+			<strong>Bombas de calor geotérmicas (BCG):</strong> Aproveitam as diferenças de temperatura entre o solo e o<br>
+			ambiente, fornecendo calor e frio.<br><br>
+			<strong>Centrais Geotérmicas:</strong> aproveitamento direto de fluidos geotérmicos em centrais a altas temperaturas<br>
+			(> 150ºC), para movimentar uma turbina e produzir energia eléctrica.
+		</p>
 	</div>
 
 	<div class="trocaCor3">
+		<p>
+			<b class="b4.1">
+				Vantagens:
+			</b>
+		</p>
+		<p class="a4.1">
+			Menos poluição, proporcionando um ambiente energético alternativo, que evite a queima de combustíveis fósseis além<br>
+			da Pequena quantidade de solo necessário para construir centrais geotérmicas.<br>
+			Contra outros tipos de fontes de energia renováveis, como energia eólica ou da energia solar, a energia geotérmica<br>
+			pode ser utilizada para a produção de eletricidade 24h/dia. Essa energia é praticamente inesgotável, como todos os<br>
+			outros tipos de fontes renováveis, a energia geotérmica fornece a segurança do abastecimento de energia necessária<br>
+			para reduzir as importações de combustíveis convencionais.
+		</p>
+		<p>
+			<b class="b4.2">
+				Desvantagens:
+			</b>
+		</p>
+		<p class="a4.2">
+			Embora a energia geotérmica seja uma energia menos poluente, se retirada de maneira irregular pode causar danos ao<br>
+			planeta, alterando assim sua geologia. Dessa forma, além do cuidado necessário com a perfuração do solo, a água<br>
+			encontrada abaixo da superfície terrestre deve ser tratada antes de ser lançada nos rios e nos mares, uma vez que<br>
+			muitos minérios encontrados são prejudiciais à saúde.<br>
+			Ademais, os altos custos de implementação e a poluição sonora gerada pelas Usinas Geotérmicas são outros problemas<br>
+			encontrados no uso desse tipo de energia. A perfuração no solo é realizada por máquinas muito ruidosas, prejudicando<br>
+			assim, a vida da população circundante.<br>
+			Apesar das centrais geotérmicas não necessitarem de grandes espaços para a produção, ela é muito dispendiosa e se<br>
+			comparada às outras, possui baixa eficiência, sendo portanto, pouco rentável.
+		</p>
+	</div>
+
+	<div class="trocaCor">
+		<p>
+			<b class="b5">
+				Brasil e o Mundo:
+			</b>
+		</p>
+		<p class="a5">
+			<strong>Os três países com maior produção de energia geotérmica no mundo são:</strong> os Estados Unidos, as Filipinas e a Indonésia.<br>
+			Além deles, outros países têm optado pela produção de energia geotérmica, tais quais a China, Japão, Chile, México,<br>
+			França, Alemanha, Suíça, Hungria, Islândia.<br>
+			o Brasil um país que não apresenta grande potencial de energia geotérmica, uma vez que ela é explorada, em maior parte,<br>
+			nos locais do planeta onde surgem as áreas de transição entre as placas tectônicas.
+		</p>
 	</div>
 
 	<footer>
