Mudança Hugo + Imagem Gustavo Geotermica_3

--- a/SiteEnergiaR/WebContent/Home.html
+++ b/SiteEnergiaR/WebContent/Home.html
@@ -4,6 +4,7 @@
 		<title>Pagina Inicial</title>
 
 		<link rel="stylesheet" href="CSS/MenuHF.css">
+		<link rel="stylesheet" href="CSS/HomeHF.css">
 
 	</head>
 
@@ -39,11 +40,16 @@
 
 
 	<div class="trocaCor2">
-		ds
+		<div class="texto1">
+		<p><b>Energia Ondomotriz:</b></p>
+		<p>É a energia das ondas</p>
+	</div>
 	</div>
 
 	<div class="trocaCor">
-			gdsds
+
+
+
 	</div>
 
 	<div class="trocaCor3">
