--- a/SiteEnergiaR/WebContent/Ondas.html
+++ b/SiteEnergiaR/WebContent/Ondas.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Pagina Inicial</title>
 
+		<link rel="stylesheet" href="CSS/MenuHF.css">
 		<link rel="stylesheet" href="CSS/OndasHF.css">
 
 	</head>
@@ -22,7 +23,6 @@
 			<li><a href="#">APP</a></li>
 		</ul>
 	</div>
-
 
 
 	<div  class="trocaCor">
