Add Gif Fico top

--- a/SiteEnergiaR/WebContent/Solar.html
+++ b/SiteEnergiaR/WebContent/Solar.html
@@ -1,44 +1,44 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Pagina Inicial</title>
+		<title>Pagina Energia Solar</title>
+		<!-- Link para os arquivos Css -->
 		<link rel="stylesheet" href="CSS/MenuHF.css">
 		<link rel="stylesheet" href="CSS/SolarHF.css">
-
   </head>
 
 	<body>
-
+		<!-- Menu -->
 		<div class="logo">
 			<img src="Imagem/Energy_logo.png">
 			<ul>
-				<li><a href="#">HOME</a></li>
-				<li><a href="#">SOLAR</a></li>
-				<li><a href="#">EOLICA</a></li>
+				<li><a href="Home.html">HOME</a></li>
+				<li><a href="Solar.html">SOLAR</a></li>
+				<li><a href="Eolica.html">EOLICA</a></li>
 				<li><a href="#">BIOMASSA</a></li>
-				<li><a href="#">GEOTERMICA</a></li>
+				<li><a href="Geotermica.html">GEOTERMICA</a></li>
 				<li><a href="#">ONDAS</a></li>
 				<li><a href="#">FORMULARIO</a></li>
 				<li><a href="#">APP</a></li>
 			</ul>
 		</div>
 
-
+	<!-- Divisão em Branco -->
 	<div  class="trocaCor">
 		<div class="img_solar">
 		<img id="solar_1" src="Imagem/Solar_1.png" alt="Solar_Desenho_1">
-	    <p>
+	    <h1>
 	      <b>
 	        <center>
 	          Energia Solar
 	        </center>
 	      </b>
-	    </p>
-	    <p>
+	    </h1>
+	    <h1>
 	      <b>
 	        Funcionamento:
 	      </b>
-	    </p>
+	    </h1>
 	    <p>
 	      A energia solar funciona através dos painéis que capturam a radiação solar através dos painéis fotovoltaicos onde está radiação é convertida em energia elétrica através de um conversor conectado junto a rede elétrica convencional.
 			</p>
@@ -50,69 +50,84 @@
 			</p>
 		</div>
   </div>
-	<div  class="trocaCor2">
+	<!-- Divisão em Verde -->
+	<div  id="trocaCor_Solar3">
 		<br>
 		<br>
-		 <p>
+		 <h1>
 	     <b>
 	       Inversor de Energia:
 	     </b>
-	   </p>
+	   </h1>
 	   <p>
 	     O inversor de energia é o equipamento que faz a conversão da energia recebida, ele transforma a energia solar que está em corrente continua CC* e transforma em corrente Alternada CA* após passar pelo inversor a energia pode ser utilizada em qualquer equipamento domestico e em alguns equipamentos industriais.
 	   </p>
-	</div>
-  <div  class="trocaCor">
 		<img id="solar_4" src="Imagem/Solar_4.png" alt="Solar_Desenho_4">
-	    <p>
+	    <h1>
 	      <b>
 	      Corrente Continua:
 	      </b>
-	    </p>
+	    </h1>
 	    <p>
 	      (“CC” a corrente a qual não tem polaridade normalmente utilizada em circuitos eletrônicos, como notebooks, tvs, impressoras... está rede normalmente é convertida de CA para CC através de uma ponte retificadora)
 	    </p>
 			<br>
-	    <p>
+	    <h1>
 	      <b>
 	      Corrente Alternada:
 	      </b>
-	    </p>
+	    </h1>
 	    <p>
 	      (“CA” a corrente utilizada para enviar energia elétrica para o consumo residencial, empresarial, pode ser usado para alimentar Chuveiros, fogão, micro-ondas e qualquer outro tipo de equipamento que use esta rede)
 	    </p>
 	</div>
-	<div  class="trocaCor2">
-		<img id="solar_5" src="Imagem/Solar_5.png" alt="Solar_Desenho_5">
-		<center>
-			<p>
-				<b>
-					Funcionamento dos créditos:
-				</b>
-			</p>
-			<p>
-				A partir das regras criadas pela ANEEL foi o órgão que estabeleceu condições para uso dos geradores de energia e alimentação das redes, a energia é emprestada por outra residência, comercio, empresa ... em Watts essa energia é creditada na conta do gerador após ser utilizado. Esse crédito pode ser usado em até 5 anos deixado a conta de energia mais barata descontando da fatura mensal.
-			</p>
-		</center>
+
+	<!-- Divisão especial aumentado o tamanho da DIV para caber o texto Div Verde-->
+	<div  id="trocaCor_Solar1">
+			<img id="solar_5" src="Imagem/Solar_5.png" alt="Solar_Desenho_5">
+			<center>
+				<h1>
+					<b>
+						Funcionamento dos créditos:
+					</b>
+				</h1>
+				<p>
+					A partir das regras criadas pela ANEEL foi o órgão que estabeleceu condições para uso dos geradores de energia e alimentação das redes, a energia é emprestada por outra residência, comercio, empresa ... em Watts essa energia é creditada na conta do gerador após ser utilizado. Esse crédito pode ser usado em até 5 anos deixado a conta de energia mais barata descontando da fatura mensal.
+				</p>
+			</center>
 	</div>
-
-
-
-
-
-
-	<div class="trocaCor3">
-
+	<!-- Divisão especial aumentado o tamanho da DIV para caber o texto Div cinza -->
+	<div  id="trocaCor_Solar2">
+		<img id="solar_6" src="Imagem/Solar_6.gif" alt="Solar_Gif_6">
 	</div>
-
+	<div  class="trocaCor_Solar2">
+		<h1>
+			<b>
+				Material que é feio uma placa solar:
+			</b>
+		</h1>
+		<p>
+			A placa solar em feita de silício (SI) é composta de vários átomos minúsculos que são carregadas com elétrons, mas para gerar energia é necessário que haja dois tipos de silício na placa com cargas positivas e negativas. Para criar o silício Positivo ele é misturado com fosforo, já na criação do silício negativo ele é misturado com boro, essas duas células são colocadas juntas como se fosse um sanduiche para que haja uma reação com o sol e assim a produção de energia.
+		</p>
+		<h1>
+			<b>
+				Montagem da Placa:
+			</b>
+		</h1>
+		<p>
+			As células de silício são conectadas uma ao lado da outra através de uma faixa condutora até completar o tamanho de uma placa assim unindo todas as placas colocadas, está serie de placas são cobertas com um vidro temperado, com um tratamento antiaderente e antirreflexo para proteção e emoldurado usando um quadro de alumínio.
+		</p>
+		<h1>
+			<b>
+				Funcionamento da placa solar:
+			</b>
+		</h1>
+		<p>
+			Os fótons são os raios de sol que quando chegam na terra e entram em contato com a placa solar atingindo suas células de silício fazem que alguns elétrons (carga Negativa) se desprendam dos átomos, esses elétrons irão percorrer através das células para a parte que houver ausência deles, o espaço é preenchido e o processo continua durante o dia todo o que gera uma corrente elétrica que é chamada de energia solar Fotovoltaica.
+		</p>
+	</div>
 	<footer>
 
 	</footer>
-
-
-
-
-
-
   </body>
 </html>
