Energia das Ondas quase pronto
isso ai

--- a/SiteEnergiaR/WebContent/Ondas.html
+++ b/SiteEnergiaR/WebContent/Ondas.html
@@ -2,7 +2,6 @@
 <html>
 	<head>
 		<title>Pagina Inicial</title>
-
 		<link rel="stylesheet" href="CSS/MenuHF.css">
 		<link rel="stylesheet" href="CSS/OndasHF.css">
 
@@ -13,27 +12,58 @@
 	<div class="logo">
 		<img src="Imagem/Energy_logo.png">
 		<ul>
-			<li><a href="#">HOME</a></li>
-			<li><a href="#">SOLAR</a></li>
+			<li><a href="Home.html">HOME</a></li>
+			<li><a href="Solar.html">SOLAR</a></li>
 			<li><a href="#">EOLICA</a></li>
 			<li><a href="#">BIOMASSA</a></li>
-			<li><a href="#">GEOTERMICA</a></li>
+			<li><a href="#">HIDROGENIO</a></li>
+			<li><a href="Geotermica.html">GEOTERMICA</a></li>
 			<li><a href="#">ONDAS</a></li>
 			<li><a href="#">FORMULARIO</a></li>
 			<li><a href="#">APP</a></li>
 		</ul>
 	</div>
 
+		<h1><center>Energia das Ondas</center></h1>
 
 	<div  class="trocaCor">
-		<h2>Energia ondas e marés</h2>
-	</div>
+		<img id="onda1" src="Imagem/Ondas1.jpg" alt="Energia das Ondas">
+		<p><b>Definição:</b></p>
+		<p>A energia das ondas ou ondomotriz, provém do aproveitamento das ondas oceânicas. É uma energia "limpa", isto é, sem quaisquer custos para o ambiente</p>
+		<p><b>Funcionamento:</b></p>
+		<p>O movimento da água que resulta da força do vento transporta energia cinética que pode ser aproveitada por dispositivos próprios para a captação dessa energia, chamada energia das ondas.</p>
+		<p>Além da energia gerada pelo movimento da água que gera ondas e das quais resulta energia cinética, existe também a
+			energia das marés que resulta da deslocação da água do mar, ou seja, com as variações de marés e ainda existe a energia térmica dos oceanos que apesar de ser menos falada não deixa de ser importante.
+		</p>
 
+	</div>
 
 	<div class="trocaCor2">
+		<img id="onda2" src="Imagem/Ondas2.jpg" alt="Energia das Ondas">
+		<p><b>Tecnologia:</b></p>
+		<p>A tecnologia Pelamis afigura-se a uma cobra articulada que balança à medida que as ondas percorrem o seu comprimento.
+			Esse movimento nas articulações permite accionar geradores de electricidade e a energia é depois recolhida por um cabo submarino e encaminhada para terra.</p>
+
+			<p>O movimento ondular produz energia cinética que pode pôr uma turbina a funcionar e a energia mecânica da turbina é transformada em energia eléctrica através de um gerador.</p>
+
 	</div>
 
-	<div class="trocaCor">
+	<div class="terceiraDiv">
+
+			<p><b>Vantagens:</b></p>
+
+			<p>É uma energia renovável.</p>
+			<p>Não produz qualquer tipo de poluição.</p>
+			<p>Estão menos dependentes das condições da costa.</p>
+
+			<p><b>Desvantagens:</b></p>
+
+			<p>Instalações de potência reduzida;</p>
+			<p>Requer uma geometria da costa especial e com ondas de grande amplitude.</p>
+			<p>Impossibilita a navegação (na maior parte dos casos).	</p>
+			<p>A deterioração dos materiais pela exposição à água salgada do mar.</p>
+
+
 	</div>
 
 	<div class="trocaCor3">
