Botoões do menu tão funcionando

--- a/SiteEnergiaR/WebContent/Ondas.html
+++ b/SiteEnergiaR/WebContent/Ondas.html
@@ -14,11 +14,11 @@
 		<ul>
 			<li><a href="Home.html">HOME</a></li>
 			<li><a href="Solar.html">SOLAR</a></li>
-			<li><a href="#">EOLICA</a></li>
+			<li><a href="Eolica.html">EOLICA</a></li>
 			<li><a href="#">BIOMASSA</a></li>
-			<li><a href="#">HIDROGENIO</a></li>
+			<li><a href="Hidrogenio.html">HIDROGENIO</a></li>
 			<li><a href="Geotermica.html">GEOTERMICA</a></li>
-			<li><a href="#">ONDAS</a></li>
+			<li><a href="Ondas.html">ONDAS</a></li>
 			<li><a href="#">FORMULARIO</a></li>
 			<li><a href="#">APP</a></li>
 		</ul>
