--- a/SiteEnergiaR/WebContent/Geotermica.html
+++ b/SiteEnergiaR/WebContent/Geotermica.html
@@ -13,12 +13,13 @@
 	<div class="logo">
 		<img src="Imagem/Energy_logo.png">
 		<ul>
-			<li><a href="#">HOME</a></li>
-			<li><a href="#">SOLAR</a></li>
-			<li><a href="#">EOLICA</a></li>
+			<li><a href="Home.html">HOME</a></li>
+			<li><a href="Solar.html">SOLAR</a></li>
+			<li><a href="Eolica.html">EOLICA</a></li>
 			<li><a href="#">BIOMASSA</a></li>
-			<li><a href="#">GEOTERMICA</a></li>
-			<li><a href="#">ONDAS</a></li>
+			<li><a href="Hidrogenio.html">HIDROGENIO</a></li>
+			<li><a href="Geotermica.html">GEOTERMICA</a></li>
+			<li><a href="Ondas.html">ONDAS</a></li>
 			<li><a href="#">FORMULARIO</a></li>
 			<li><a href="#">APP</a></li>
 		</ul>
