--- a/SiteEnergiaR/WebContent/Solar.html
+++ b/SiteEnergiaR/WebContent/Solar.html
@@ -16,8 +16,9 @@
 				<li><a href="Solar.html">SOLAR</a></li>
 				<li><a href="Eolica.html">EOLICA</a></li>
 				<li><a href="#">BIOMASSA</a></li>
+				<li><a href="Hidrogenio.html">HIDROGENIO</a></li>
 				<li><a href="Geotermica.html">GEOTERMICA</a></li>
-				<li><a href="#">ONDAS</a></li>
+				<li><a href="Ondas.html">ONDAS</a></li>
 				<li><a href="#">FORMULARIO</a></li>
 				<li><a href="#">APP</a></li>
 			</ul>
