Pagina ondas feita
partiu iniciar o formulario!

CARALHO DE 4 BORA TIRAR 10 NESSA PORRA CARALHO

--- a/SiteEnergiaR/WebContent/Ondas.html
+++ b/SiteEnergiaR/WebContent/Ondas.html
@@ -49,7 +49,7 @@
 	</div>
 
 	<div class="terceiraDiv">
-
+		<img id="onda3" src="Imagem/Onda.jpg" alt="Ondas">
 			<p><b>Vantagens:</b></p>
 
 			<p>É uma energia renovável.</p>
@@ -63,10 +63,16 @@
 			<p>Impossibilita a navegação (na maior parte dos casos).	</p>
 			<p>A deterioração dos materiais pela exposição à água salgada do mar.</p>
 
-
 	</div>
 
-	<div class="trocaCor3">
+	<div class="quartaDiv">
+			<p><b>Curiosidades:</b></p>
+			<p>Ceará possui a primeira usina de ondas da América Latina, localizada no quebra-mar do Porto de Pecém, a 60km de Fortaleza, a usina de ondas
+				é responsável pela geração de energia elétrica por meio do movimento das ondas do mar e com tecnologia 100% nacional.A estimativa é de que o
+				equipamento de baixo impacto ambiental esteja completamente pronto para funcionar até o ano de 2020.</p>
+
+			<p>Deverão ser gerados 100 quilowatts (KW) para o abastecimento de energia do principal porto cearense. Ou seja, é possível abastecer cerca de 60 famílias.</p>
+
 	</div>
 
 	<footer>
