--- a/SiteEnergiaR/WebContent/Hidrogenio.html
+++ b/SiteEnergiaR/WebContent/Hidrogenio.html
@@ -82,11 +82,11 @@
 								<tr height=30%>
 									<td align=center>
 									<p id="Membrana">PEMFC <div class="corLista"> (Célula Combustível de Membrana Trocadora de Prótons)</div></p>
-									<img id="mebrana" src="Imagem/mebrana.png" alt="mebrana">
+									<img id="PEMFC" src="Imagem/menbrana2.jpg" alt="menbrana">
 									</td>
 									<td align=center valign=top>
 									<p id="Alcalina">AFC <div class="corLista">(Célula Combustível Alcalina)</div></p>
-									<img id="celula-de-combustivel" src="Imagem/celula-de-combustivel.jpg" alt="celula-de-combustivel">
+									<img id="AFC" src="Imagem/celula-de-combustivel.jpg" alt="AFC">
 									</td>
 								</tr>
 								<tr height=70% >
@@ -96,6 +96,8 @@
 									</td>
 									<td valign=center align=center>
 									<p id="Ácido">PAFC <div class="corLista">(Célula Combustível de Ácido Fosfórico)</div></p>
+									<img id="PAFC" src="Imagem/PAFC.png" alt="PAFC">
+
 									</td>
 								</tr>
 								<tr height=100% >
@@ -137,6 +139,9 @@
 
 		</footer>
 
+
+		<!--Produção hidrogenio  https://www.todamateria.com.br/hidrogenio/-->
+		<!-- https://www.profpc.com.br/C%C3%A9lula_combust%C3%ADvel.htm-->
 
 
 		</body>
