Adicionado algumas imagens

--- a/SiteEnergiaR/WebContent/Geotermica.html
+++ b/SiteEnergiaR/WebContent/Geotermica.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Pagina Inicial</title>
+		<title>Pagina Energia Geotérmica</title>
 
     <link rel="stylesheet" href="CSS/MenuHF.css">
 		<link rel="stylesheet" href="CSS/GeotermicaHF.css">
@@ -13,13 +13,12 @@
 	<div class="logo">
 		<img src="Imagem/Energy_logo.png">
 		<ul>
-			<li><a href="Home.html">HOME</a></li>
-			<li><a href="Solar.html">SOLAR</a></li>
-			<li><a href="Eolica.html">EOLICA</a></li>
+			<li><a href="#">HOME</a></li>
+			<li><a href="#">SOLAR</a></li>
+			<li><a href="#">EOLICA</a></li>
 			<li><a href="#">BIOMASSA</a></li>
-			<li><a href="Hidrogenio.html">HIDROGENIO</a></li>
-			<li><a href="Geotermica.html">GEOTERMICA</a></li>
-			<li><a href="Ondas.html">ONDAS</a></li>
+			<li><a href="#">GEOTERMICA</a></li>
+			<li><a href="#">ONDAS</a></li>
 			<li><a href="#">FORMULARIO</a></li>
 			<li><a href="#">APP</a></li>
 		</ul>
@@ -28,7 +27,7 @@
 	<h1><center>Energia Geotérmica</center></h1>
 
 	<div  class="trocaCor">
-		<img id="Geotermica_1" src="Imagem\Geotermica_1.jpg" alt="geothermal_energy">
+		<img id="Geotermica_1" src="Imagem\Geotermica_1.jpg" alt="Energia_Geotermica">
 		<p class="b1">
 			<b>
 				Definição:
@@ -54,9 +53,9 @@
 	<div class="trocaCor2">
 		<!--<img id="Geotermica_2" src="Imagem\Geotermica_2.jpg" alt="Usina_Geotermica">-->
 		<p class="b2">
-				<b>
-					Usinas Geotérmicas:
-				</b>
+			<b>
+				Usinas Geotérmicas:
+			</b>
 		</p>
 		<p class="a2">
 			Chamadas também de centrais geotérmicas são os locais de produção desse tipo de energia,<br>
@@ -78,8 +77,9 @@
 	</div>
 
 	<div class="trocaCor">
-		<p>
-			<b class="b3">
+		<img id="Geotermica_3" src="Imagem\Geotermica_3.png" alt="Formas_EnergiaGeo">
+		<p class="b3">
+			<b>
 				Formas da energia Geométrica:
 			</b>
 		</p>
@@ -95,12 +95,12 @@
 	</div>
 
 	<div class="trocaCor3">
-		<p>
-			<b class="b4.1">
+		<p class="b4">
+			<b>
 				Vantagens:
 			</b>
 		</p>
-		<p class="a4.1">
+		<p class="a4">
 			Menos poluição, proporcionando um ambiente energético alternativo, que evite a queima de combustíveis fósseis além<br>
 			da Pequena quantidade de solo necessário para construir centrais geotérmicas.<br>
 			Contra outros tipos de fontes de energia renováveis, como energia eólica ou da energia solar, a energia geotérmica<br>
@@ -108,12 +108,12 @@
 			outros tipos de fontes renováveis, a energia geotérmica fornece a segurança do abastecimento de energia necessária<br>
 			para reduzir as importações de combustíveis convencionais.
 		</p>
-		<p>
-			<b class="b4.2">
+		<p class="b4">
+			<b>
 				Desvantagens:
 			</b>
 		</p>
-		<p class="a4.2">
+		<p class="a4">
 			Embora a energia geotérmica seja uma energia menos poluente, se retirada de maneira irregular pode causar danos ao<br>
 			planeta, alterando assim sua geologia. Dessa forma, além do cuidado necessário com a perfuração do solo, a água<br>
 			encontrada abaixo da superfície terrestre deve ser tratada antes de ser lançada nos rios e nos mares, uma vez que<br>
@@ -127,8 +127,9 @@
 	</div>
 
 	<div class="trocaCor">
-		<p>
-			<b class="b5">
+		<img id="Geotermica_6" src="Imagem\Geotermica_6.png" alt="Brasil">
+		<p class="b5">
+			<b>
 				Brasil e o Mundo:
 			</b>
 		</p>
