--- a/SiteEnergiaR/WebContent/Geotermica.html
+++ b/SiteEnergiaR/WebContent/Geotermica.html
@@ -27,7 +27,7 @@
 	<h1><center>Energia Geotérmica</center></h1>
 
 	<div  class="trocaCor">
-		<img id="Geotermica_1" src="Imagem\Geotermica_1.jpg" alt="Energia_Geotermica">
+		<img id="Geotermica_1" src="Imagem\Geotermica_1.png" alt="Energia_Geotermica">
 		<p class="b1">
 			<b>
 				Definição:
@@ -51,7 +51,7 @@
 	</div>
 
 	<div class="trocaCor2">
-		<!--<img id="Geotermica_2" src="Imagem\Geotermica_2.jpg" alt="Usina_Geotermica">-->
+		<img id="Geotermica_2" src="Imagem\Geotermica_2.png" alt="Usina_Geotermica">
 		<p class="b2">
 			<b>
 				Usinas Geotérmicas:
@@ -95,6 +95,7 @@
 	</div>
 
 	<div class="trocaCor3">
+		<img id="Geotermica_4" src="Imagem\Geotermica_4.png" alt="Vantagens">
 		<p class="b4">
 			<b>
 				Vantagens:
@@ -108,6 +109,7 @@
 			outros tipos de fontes renováveis, a energia geotérmica fornece a segurança do abastecimento de energia necessária<br>
 			para reduzir as importações de combustíveis convencionais.
 		</p>
+		<img id="Geotermica_5" src="Imagem\Geotermica_5.png" alt="Desvantagens">
 		<p class="b4">
 			<b>
 				Desvantagens:
